# dreamers-mcp

./: .gitignore  Install-DreamersMcpCodex.ps1  Install-DreamersMcpCodex.sh  Install-DreamersMcpCopilot.ps1  README.md  Remove-DreamersMcpCodex.ps1  Remove-DreamersMcpCodex.sh  Remove-DreamersMcpCopilot.ps1  package-lock.json  package.json  pyproject.toml  test-benchmarks.md  tsconfig.build.json  tsconfig.json
bundles/codex/refs/: dreamers-mcp-stats.md
bundles/codex/scripts/: dreamers_hook.ps1  dreamers_hook.sh  dreamers_mcp_server.py  dreamers_stats.py
bundles/copilot/hooks/: dreamers-stats.json
bundles/copilot/scripts/: dreamers_hook.ps1  dreamers_hook.sh  dreamers_stats.py
bundles/shared/scripts/: dreamers_node_launcher.py
dreamers_stats/: cli.py  codex_bundle.py  mcp_server.py  runtime.py
src/: checkpoints.ts  cli.ts  codex-session.ts  dashboard.ts  errors.ts  events.ts  hooks.ts  mcp-server.ts  reports.ts  runtime.ts  tokens.ts  types.ts  utils.ts
tests/: bundle_test_support.py  test_codex_bundle.py  test_copilot_bundle.py  test_shared_stats.py
tests-ts/: cli-mcp.test.ts  run-compat-tests.mjs  runtime.test.ts
