[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dreamers-mcp"
version = "0.1.0"
description = "Shared Dreamers stats runtime, CLI, and MCP server."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
dreamers-stats = "dreamers_stats.cli:console_main"
dreamers-stats-mcp = "dreamers_stats.mcp_server:console_main"

[tool.setuptools]
packages = ["dreamers_stats"]
